signup backend coded added

--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
   "homepage": "https://github.com/Shivamvish26/ecommerce_database#readme",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^5.1.0",
-    "mongoose": "^8.13.2",
+    "mongoose": "^8.14.0",
     "nodemon": "^3.1.9"
   }
 }
